--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "test-deploy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "nimrod",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.8",
     "express": "^4.16.3"
-  },
-  "scripts":{
-    "start":"node index.js"
   }
 }
